# gd32e103-hal

./: AUTHORS  CHANGELOG.md  Cargo.toml  Embed.toml  LICENSE  README.md  memory.x
.cargo/: config
.github/workflows/: ci.yml  clippy.yml
examples/: adc-dma-circ.rs  adc-dma-rx.rs  adc.rs  adc_temperature.rs  blinky.rs  blinky_generic.rs  blinky_timer_irq.rs  crc.rs  delay.rs  exti.rs.disabled  hello.rs  itm.rs  led.rs  nojtag.rs  panics.rs  pwm.rs  pwm_complementary.rs  serial-dma-circ.rs  serial-dma-peek.rs  serial-dma-rx.rs  serial-dma-tx.rs  serial-fmt.rs  serial.rs  serial_config.rs  timer-interrupt-rtic.rs
src/: adc.rs  can.rs  delay.rs  dma.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  pwm.rs  rcu.rs  serial.rs  timer.rs  watchdog.rs
src/gpio/: erased.rs  partially_erased.rs
