[package]
authors = ["Andrew Walbran <qwandor@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the GD32E103 family of microcontrollers"
keywords = ["arm", "cortex-m", "gd32", "hal"]
license = "MIT OR Apache-2.0"
name = "gd32e103-hal"
repository = "https://github.com/gd32-rust/gd32e103-hal"
readme = "README.md"
edition = "2018"
version = "0.0.1"

[package.metadata.docs.rs]
features = ["rt"]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
bxcan = "0.7.0"
cast = { version = "0.3.0", default-features = false }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.2"
embedded-dma = "0.2.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
nb = "1.0.0"
void = { version = "1.0.2", default-features = false }
gd32e1 = { version = "0.7.0", features = ["gd32e103", "rt", "critical-section"] }

[dev-dependencies]
byteorder = { version = "1.4.3",default-features = false }
cobs = { version = "0.2.3", default-features = false }
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
crc16 = { version = "0.4.0", default-features = false }
either = { version = "1.6.1", default-features = false }
heapless = "0.7.14"
m = "0.1.1"
mfrc522 = "0.3.0"
panic-halt = "0.2.0"
panic-itm = "0.4.2"
panic-semihosting = "0.6.0"
serde = { version = "1.0.137", default-features = false }
serde_derive = "1.0.137"

[features]
doc = []
rt = ["gd32e1/rt"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true

#[[example]]
#name = "usb_serial"
#required-features = ["rt", "stm32-usbd"]

#[[example]]
#name = "usb_serial_interrupt"
#required-features = ["rt", "stm32-usbd"]

#[[example]]
#name = "usb_serial_rtic"
#required-features = ["rt", "stm32-usbd"]

[[example]]
name = "blinky_timer_irq"
required-features = ["rt"]

#[[example]]
#name = "blinky_rtcalarm_irq"
#required-features = ["rt"]

#[[example]]
#name = "qei"
#required-features = ["medium"]

[[example]]
name = "timer-interrupt-rtic"
required-features = ["rt"]

#[[example]]
#name = "exti"
#required-features = ["rt"]

#[[example]]
#name = "can-echo"
#required-features = ["has-can"]

#[[example]]
#name = "can-loopback"
#required-features = ["has-can"]

#[[example]]
#name = "can-rtic"
#required-features = ["has-can", "rt"]
